:lipstick: style: remove unnecessary logs and modify toList()